--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/moment": "^1.3.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
@@ -32,7 +33,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.16.4",
     "sass-loader": "^7.0.0",
-    "vue-jest": "^4.0.0-0",
-    "vee-validate": "^3.0.8"
+    "vee-validate": "^3.0.8",
+    "vue-jest": "^4.0.0-0"
   }
 }
