--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-vuex-localstorage": "^1.2.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
